--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
       <span class="dot" onclick="currentSlide(3)"></span> 
    </div>
 ​
- <h3>latest recipe: Bali Bliss Papaya Salad ⌄</h3>
+<h3> <a href ="./baliblisspapayasalad.html"> latest recipe: Bali Bliss Papaya Salad ⌄ </a> </h3>
   
   <!-- </form> --> 
   <div class="bg-img">
